--- a/cadastro.html
+++ b/cadastro.html
@@ -16,17 +16,17 @@
    align-items:center;
  }
 
- /* ---- CAIXA ---- */
+ 
  .caixa-cadastro{
    width:90%;
    max-width:480px;
    background:#ffffff;
    padding:55px 40px;
    border-radius:35px;
-   text-align:center; /* 🔥 Tudo centralizado dentro da caixa */
+   text-align:center; 
    display:flex;
    flex-direction:column;
-   align-items:center; /* 🔥 Centraliza inputs e botões */
+   align-items:center; 
    box-shadow:0 5px 15px rgba(0,0,0,0.25);
  }
 
@@ -34,20 +34,20 @@
    margin-top:0;
    font-size:32px;
    color:#0C5F52;
-   text-align:center; /* Garantia dupla */
+   text-align:center; 
  }
 
- /* ---- INPUTS ---- */
+ 
  .caixa-cadastro input{
    width:100%;
-   max-width:350px; /* 🔥 Para ficar centralizado e proporcional */
+   max-width:350px;
    padding:14px 18px;
    margin-top:20px;
    border:2px solid #0C5F52;
    border-radius:25px;
    font-size:17px;
    color:#0C5F52;
-   text-align:center; /* 🔥 Agora o texto dentro do input também fica centralizado */
+   text-align:center;
  }
 
  .caixa-cadastro input::placeholder{
@@ -56,7 +56,7 @@
    text-align:center;
  }
 
- /* ---- BOTÃO ---- */
+ 
  .botao-cadastrar{
    width:100%;
    max-width:350px;
@@ -76,7 +76,7 @@
    background:#0fc7a0;
  }
 
- /* ---- LINK ---- */
+
  .link-login{
    margin-top:20px;
    font-size:16px;
@@ -108,3 +108,4 @@
 
 </body>
 </html>
+
